# llm-kimi

./: README.md  llm_kimi.py  llm_minimax.py  pyproject.toml
tests/: test_kimi.py  test_minimax.py
