[project]
name = "llm-minimax"
version = "0.1"
description = "LLM plugin for accessing MiniMax models via their API"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm",
    "llm-anthropic>=0.21.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
llm-anthropic = { path = "../llm-anthropic", editable = true }

[project.urls]
Homepage = "https://github.com/simonw/llm-minimax"
Changelog = "https://github.com/simonw/llm-minimax/releases"
Issues = "https://github.com/simonw/llm-minimax/issues"
CI = "https://github.com/simonw/llm-minimax/actions"

[project.entry-points.llm]
minimax = "llm_minimax"

[project.optional-dependencies]
test = ["pytest"]
