[project]
name = "llm-kimi"
version = "0.1"
description = "LLM plugin for accessing Kimi models via their Anthropics-compatible API"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm",
    "llm-anthropic>=0.21.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
llm-anthropic = { path = "../llm-anthropic", editable = true }

[project.urls]
Homepage = "https://github.com/basicv8vc/llm-kimi"
Changelog = "https://github.com/basicv8vc/llm-kimi/releases"
Issues = "https://github.com/basicv8vc/llm-kimi/issues"
CI = "https://github.com/basicv8vc/llm-kimi/actions"

[project.entry-points.llm]
kimi = "llm_kimi"

[project.optional-dependencies]
test = ["pytest"]
